<resources xmlns:tools="http://schemas.android.com/tools">
  <string name="application_id" translatable="false">com.absinthe.anywhere_</string>
  <string name="app_name">Anywhere-</string>
  <string name="settings_title">Settings</string>
  <string name="setup_title">Setup</string>
  <string name="about_title">About</string>
  <string name="shortcuts_title">Shortcuts</string>
  <string name="backup_title">Backup</string>
  <string name="app_list_title">Activities List</string>
  <string name="app_list_detail_title">App Detail</string>
  <string name="card_editor_title">Card Editor</string>
  <string name="tile_collector_on">Open Collector</string>
  <string name="tile_collector_off">Close Collector</string>
  <string name="shortcut_add">Add an Anywhere-</string>
  <string name="shortcut_open">Open an Anywhere- card</string>
  <string name="welcome_title">Welcome to Anywhere-</string>
  <string name="welcome_start_button">Start</string>
  <string name="logcat" translatable="false">Logcat</string>
  <string name="drawer_open" translatable="false">Open navigation drawer</string>
  <string name="drawer_close" translatable="false">Close navigation drawer</string>
  <string name="notification_channel_collector" translatable="false">Collector</string>
  <string name="notification_channel_logcat" translatable="false">@string/logcat</string>
  <string name="notification_channel_backup" translatable="false">Backup Service</string>
  <string name="notification_channel_workflow" translatable="false">Workflow Service</string>
  <string name="notification_collector_title">Collector is running</string>
  <string name="notification_collector_content">This notification can be ignored</string>
  <string name="notification_logcat_title">Logcat is starting recording</string>
  <string name="notification_logcat_content">Tap to stop recording</string>
  <string name="notification_backup_title">Backing up cards</string>
  <string name="notification_backup_content">This may take some time</string>
  <string name="notification_workflow_title">Executing Workflow task</string>
  <string name="notification_workflow_content">Waiting for execution</string>
  <string name="help_card_title">Help Docs</string>
  <string name="add">Add</string>
  <string name="permission_label_provider_read">Allow application to read provider database</string>
  <string name="none">None</string>
  <string name="slogan">Anywhere- To Where You Want to</string>
  <string name="whats_this">What\'s this?</string>
  <string name="developer">Developer</string>
  <string name="developer_info">Developer &amp; Designer</string>
  <string name="certification">Certification</string>
  <string name="android_links_title">Joined \"Android-Links\"</string>
  <string name="green_android_title">Comply to “Convention of Green Apps for Android”</string>
  <string name="open_source_licenses">Open Source Licenses</string>
  <string name="other_works">Other Works</string>
  <string name="communication">Communication</string>
  <string name="kage_intro">An app which can cast multi-media files to other Android devices.</string>
  <string name="lc_intro">An app which can look at the CPU architecture of apps in your device.</string>
  <string name="toast_permission_overlap">Please grant Overlay permission to \"Anywhere-\"</string>
  <string name="toast_collector_opened">Collector opened</string>
  <string name="ib_collector_todo">Collector</string>
  <string name="accessibility_service_description">Turn on this auxiliary item for automatic click function.</string>
  <string name="dialog_permission_title">Permission Required</string>
  <string name="dialog_permission_message">Shizuku permission required, due to the MIUI ROM limitations, please go to Shizuku Manager to acquire permission</string>
  <string name="dialog_delete_title">Delete</string>
  <string name="dialog_delete_message">Are you sure to delete %s ?</string>
  <string name="dialog_delete_with_sub_item_message">Are you sure to delete %s and its items?</string>
  <string name="dialog_delete_positive_button">Confirm</string>
  <string name="dialog_close_button">Close</string>
  <string name="dialog_go_to_perm_button">Grant</string>
  <string name="dialog_add_shortcut_title">Add Shortcuts</string>
  <string name="dialog_add_shortcut_message">Are you sure to add %s ?</string>
  <string name="dialog_add_select_shortcut_message">Are you sure to add the selected card to the pinned shortcut?</string>
  <string name="dialog_remove_shortcut_title">Delete Shortcuts</string>
  <string name="dialog_remove_shortcut_message">Are you sure to delete %s ?</string>
  <string name="dialog_cant_add_shortcut_title">Unable to Add Shortcuts</string>
  <string name="dialog_cant_add_shortcut_message">You can only add up to 3 Shortcuts</string>
  <string name="dialog_add_home_shortcut_title">Add Pinned Shortcut</string>
  <string name="dialog_copy">Copy</string>
  <string name="dialog_dynamic_params_title">Input Dynamic Params</string>
  <string name="dialog_shell_result_title">Shell Result</string>
  <string name="dialog_add_shortcut_anymore_button">Add anymore</string>
  <string name="dialog_title_a11y_announcement">Announcement on accessibility</string>
  <string name="dialog_title_a11y_announcement_message">Anywhere- uses accessibility permissions to perform some automated operations. Anywhere- is completely open source, and promises not to use accessibility permissions to damage your device, you can click to view the source code.</string>
  <string name="dialog_allow_button">Allow</string>
  <string name="dialog_deny_button">Allow</string>
  <string name="bsd_btn_done">Done</string>
  <string name="bsd_error_should_not_empty">Can\'t be empty</string>
  <string name="bsd_text_input_layout_class_name_label">Class Name</string>
  <string name="bsd_text_input_layout_package_name_label">Package Name</string>
  <string name="bsd_text_input_layout_app_name_label">App Name</string>
  <string name="bsd_text_input_layout_url_scheme_label">URL Scheme</string>
  <string name="bsd_text_input_layout_description_label">Description(Optional)</string>
  <string name="bsd_text_input_layout_intent_action_label">Intent Action(Optional)</string>
  <string name="bsd_text_input_layout_intent_package_label">Package Name(Optional)</string>
  <string name="bsd_text_input_layout_br_intent_class_label">Class Name(Optional)</string>
  <string name="bsd_text_input_layout_intent_data_label">Intent Data(Optional)</string>
  <string name="bsd_text_input_layout_intent_extra_label">Add Intent Extras(Optional)</string>
  <string name="bsd_text_input_layout_image_uri_hint">Image URI</string>
  <string name="bsd_text_input_layout_dynamic_params_label">Dynamic Params(Optional)</string>
  <string name="bsd_text_input_layout_shell_name_label">Shell Name</string>
  <string name="bsd_text_input_layout_switch_shell_name_label">Switch Shell Name</string>
  <string name="bsd_text_input_layout_switch_on_label">Switch On</string>
  <string name="bsd_text_input_layout_switch_off_label">Switch Off</string>
  <string name="bsd_text_input_layout_file_uri_hint">File URI</string>
  <string name="bsd_text_input_layout_application_id_hint">Launched app</string>
  <string name="bsd_text_input_layout_entry_activity_hint">Entry Activity</string>
  <string name="bsd_text_input_layout_app_name_helper_text">Give your Anywhere- card a name</string>
  <string name="bsd_text_input_layout_url_scheme_helper_text">URL Scheme. Support standard URL Scheme protocol and #Intent; string</string>
  <string name="bsd_text_input_layout_description_helper_text">Describe your Anywhere- card</string>
  <string name="bsd_text_input_layout_dynamic_params_helper_text">Enter parameters while each opening\nExample: param1&amp;param2</string>
  <string name="bsd_text_input_layout_switch_on_helper_text">Execute the shell above when the switch is on</string>
  <string name="bsd_text_input_layout_switch_off_helper_text">Execute the shell above when the switch is off</string>
  <string name="bsd_switch_shell_status_on">Status ON</string>
  <string name="bsd_switch_shell_status_off">Status OFF</string>
  <string name="menu_sort">Sort</string>
  <string name="menu_about">About</string>
  <string name="menu_delete">Delete</string>
  <string name="menu_done">Done</string>
  <string name="menu_sort_by_time_desc">Descending by creating time(9–0)</string>
  <string name="menu_sort_by_time_asc">Ascending by creating time(0–9)</string>
  <string name="menu_sort_by_name_desc">Descending by name(Z–A)</string>
  <string name="menu_sort_by_name_asc">Ascending by name(A–Z)</string>
  <string name="menu_sort_manually">Drag to sort</string>
  <string name="menu_move_to_page">Move to page</string>
  <string name="menu_custom_color">Custom color</string>
  <string name="menu_share_card">Share card</string>
  <string name="menu_custom_icon">Custom icon</string>
  <string name="menu_restore_icon">Restore icon</string>
  <string name="menu_share_to_cloud">Share to cloud</string>
  <string name="settings_category_others">Others</string>
  <string name="settings_working_mode">Working Mode</string>
  <string name="settings_change_background">Change Background</string>
  <string name="settings_working_mode_summary">Select a working mode</string>
  <string name="settings_change_background_summary">Choose an image as background to home page</string>
  <string name="settings_restore">Restore</string>
  <string name="settings_backup_backup_title">Create a New Backup File</string>
  <string name="settings_backup_share_title">Share Configurations</string>
  <string name="settings_backup_restore_title">Restore from Storage Files</string>
  <string name="settings_backup_apply_title">Apply Configurations</string>
  <string name="settings_backup_backup_summary">Create a backup file in storage to export Anywhere- cards</string>
  <string name="settings_backup_share_summary">Copy &amp; share your Anywhere-</string>
  <string name="settings_backup_restore_summary">Select a <b>*.awbackups</b> suffix file to import Anywhere- cards</string>
  <string name="settings_backup_apply_summary">Apply shared Anywhere- configurations</string>
  <string name="settings_backup_cloud_category">Cloud Backup</string>
  <string name="settings_backup_webdav_host_title">WebDAV Host</string>
  <string name="settings_backup_webdav_username_title">WebDAV Username</string>
  <string name="settings_backup_webdav_password_title">WebDAV Password</string>
  <string name="settings_backup_webdav_backup_title">Backup now</string>
  <string name="settings_backup_webdav_auto_backup_title">Auto Backup</string>
  <string name="settings_backup_webdav_restore_title">Restore Backup Files</string>
  <string name="settings_backup_webdav_auto_backup_summary">Automatically trigger backup if any card has changed</string>
  <string name="settings_transparent_icon_title">Transparent Icon</string>
  <string name="settings_transparent_icon_summary">Used to prevent the generation of application corner marks when creating desktop shortcuts on some ROMs</string>
  <string name="settings_editor_entry_animation">Editor Entry Animation</string>
  <string name="settings_editor_entry_animation_summary">It will have a better animation experience after turning on this option</string>
  <string name="settings_deprecated_sc_creating_method">Use deprecated method to create shortcuts</string>
  <string name="settings_deprecated_sc_creating_method_summary">We use this method to create shortcuts by default under Android 8.0</string>
  <string name="settings_show_defreezing_toast">Prompt when unfreezing the application</string>
  <string name="settings_show_defreezing_toast_summary">How many steps does it take to put an elephant in the refrigerator?</string>
  <string name="dialog_url_scheme_community">Community</string>
  <string name="menu_settings">Settings</string>
  <string name="settings_backup">Backup</string>
  <string name="settings_category_normal">General</string>
</resources>