<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

  <PreferenceCategory
    app:key="normalCategory"
    app:title="@string/settings_category_normal">

    <rikka.material.preference.MaterialSwitchPreference
      app:defaultValue="false"
      app:icon="@drawable/ic_transparent_icon"
      app:key="transparentIcon"
      app:summary="@string/settings_transparent_icon_summary"
      app:title="@string/settings_transparent_icon_title" />

    <rikka.material.preference.MaterialSwitchPreference
      app:defaultValue="false"
      app:icon="@drawable/ic_animation"
      app:key="editorEntryAnim"
      app:summary="@string/settings_editor_entry_animation_summary"
      app:title="@string/settings_editor_entry_animation" />

    <rikka.material.preference.MaterialSwitchPreference
      app:defaultValue="false"
      app:icon="@drawable/ic_deprecate_icon"
      app:key="deprecatedScCreatingMethod"
      app:summary="@string/settings_deprecated_sc_creating_method_summary"
      app:title="@string/settings_deprecated_sc_creating_method" />

    <rikka.material.preference.MaterialSwitchPreference
      app:defaultValue="true"
      app:icon="@drawable/ic_snowflake"
      app:key="showDefreezingToast"
      app:summary="@string/settings_show_defreezing_toast_summary"
      app:title="@string/settings_show_defreezing_toast" />

  </PreferenceCategory>

</PreferenceScreen>
