<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:key="normalCategory"
        app:title="@string/settings_category_normal">

        <ListPreference
            app:key="workingMode"
            app:title="@string/settings_working_mode"
            app:summary="@string/settings_working_mode_summary"
            app:entries="@array/list_working_mode"
            android:entryValues="@array/list_working_mode_value"/>

        <Preference
            app:key="changeBackground"
            app:title="@string/settings_change_background"
            app:summary="@string/settings_change_background_summary"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:key="othersCategory"
        app:title="@string/settings_category_others">

        <Preference
            app:key="about"
            app:title="@string/menu_about"
            app:summary="这里是 Anywhere- !"/>

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>