<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:ignore="AlwaysShowAction">

    <item
            android:id="@+id/toolbar_sort"
            android:icon="@drawable/ic_filter_list"
            android:title="@string/menu_sort"
            app:showAsAction="always" />

    <item
            android:id="@+id/toolbar_settings"
            android:icon="@drawable/ic_settings_outline"
            android:title="@string/menu_settings"
            app:showAsAction="always" />

    <item
            android:id="@+id/toolbar_delete"
            android:icon="@drawable/ic_delete_toolbar"
            android:title="@string/menu_delete"
            app:showAsAction="always"
            android:visible="false" />

    <item
            android:id="@+id/toolbar_move"
            android:icon="@drawable/ic_move"
            android:title="@string/menu_move_to_page"
            app:showAsAction="always"
            android:visible="false" />

    <item
            android:id="@+id/toolbar_create_sc"
            android:icon="@drawable/ic_add_home_shortcuts"
            android:title="@string/dialog_add_home_shortcut_title"
            app:showAsAction="always"
            android:visible="false" />

    <item
            android:id="@+id/toolbar_done"
            android:icon="@drawable/ic_done"
            android:title="@string/menu_done"
            app:showAsAction="always"
            android:visible="false" />

</menu>