<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/bsd_edit_text_margin_horizontal"
    android:layout_marginVertical="@dimen/bsd_margin_vertical"
    android:background="@color/transparent">

    <TextView
        android:id="@+id/tv_indicator_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_red_dot"
        android:drawablePadding="3dp"
        android:gravity="center"
        android:text="@string/bsd_switch_shell_status_on"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/bsd_edit_text_margin_horizontal"
        android:drawableStart="@drawable/ic_green_dot"
        android:drawablePadding="3dp"
        android:gravity="center"
        android:text="@string/bsd_switch_shell_status_off"
        app:layout_constraintStart_toEndOf="@id/tv_indicator_red"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_app_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bsd_item_margin_vertical"
        android:hint="@string/bsd_text_input_layout_switch_shell_name_label"
        app:errorEnabled="true"
        app:helperText="@string/bsd_text_input_layout_app_name_helper_text"
        app:helperTextEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/tv_indicator_red">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:nextFocusForward="@id/tiet_switch_on" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_switch_on"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bsd_item_margin_vertical"
        android:hint="@string/bsd_text_input_layout_switch_on_label"
        app:errorEnabled="true"
        app:helperText="@string/bsd_text_input_layout_switch_on_helper_text"
        app:helperTextEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/til_app_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_switch_on"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_switch_off"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bsd_item_margin_vertical"
        android:hint="@string/bsd_text_input_layout_switch_off_label"
        app:errorEnabled="true"
        app:helperText="@string/bsd_text_input_layout_switch_off_helper_text"
        app:helperTextEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/til_switch_on">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_switch_off"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_description"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bsd_item_margin_vertical"
        android:layout_marginBottom="@dimen/editor_padding_bottom"
        android:hint="@string/bsd_text_input_layout_description_label"
        app:helperText="@string/bsd_text_input_layout_description_helper_text"
        app:helperTextEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_switch_off">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:importantForAutofill="no" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>